--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,10 @@ ul {
   width: 100%;
 }
 
+a.site-logo img {
+  max-width: 200px;
+}
+
 .page-header.is-sticky {
   position: fixed;
   box-shadow: 0 5px 16px rgba(0, 0, 0, 0.1);
