--- a/css/style.css
+++ b/css/style.css
@@ -727,6 +727,9 @@ section.missione-wrapper .missione p span {
     height: auto;
     margin: 20px;
   }
+  footer .footer-menu h3 {
+    margin: 16px 0;
+  }
 }
 @media screen and (max-width: 767px) {
   section.contact-wrapepr .form-wrapper .form_div {
@@ -741,6 +744,9 @@ section.missione-wrapper .missione p span {
   }
   .contact-item.text-center {
     margin-bottom: 40px;
+  }
+  section.banner-sectio .bnr-text p {
+    max-width: 100%;
   }
 }
 
