--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -66,6 +66,10 @@
         height: auto;
         margin: 20px;
     }
+
+    footer .footer-menu h3 {
+        margin: 16px 0;
+    }
 }
 
 @media screen and (max-width: 767px) {
@@ -84,5 +88,9 @@
 
     .contact-item.text-center {
         margin-bottom: 40px;
+    }
+
+    section.banner-sectio .bnr-text p {
+        max-width: 100%;
     }
 }
