--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ a.site-logo img {
 }
 
 section.banner-sectio {
-  background: url(../img/home-bnr.jpg);
+  background: url(../img/home-bnr.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
