--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -25,7 +25,7 @@
 }
 
 @mixin home-bnr {
-    background: url(../img/home-bnr.jpg);
+    background: url(../img/home-bnr.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
