--- a/css/style.css
+++ b/css/style.css
@@ -673,7 +673,7 @@ section.missione-wrapper .missione p span {
 }
 
 section.contattaci.about {
-  background: url(../img/about-bnr.jpg);
+  background: url(../img/about-bnr.jpeg);
   height: 500px;
   background-repeat: no-repeat;
   background-size: cover;
