--- a/scss/style.scss
+++ b/scss/style.scss
@@ -727,7 +727,7 @@ section.missione-wrapper {
 }
 
 section.contattaci.about {
-    background: url(../img/about-bnr.jpg);
+    background: url(../img/about-bnr.jpeg);
     @include bg-pro;
     background-position: center;
 
