--- a/scss/style.scss
+++ b/scss/style.scss
@@ -516,7 +516,7 @@ section.casinos-italy.casino-di-venezia {
 
 // contattaci
 .contattaci {
-    background: url(../img/contattaci.jpg);
+    background: url(../img/contattaci.jpeg);
     @include bg-pro;
 
 
