--- a/css/style.css
+++ b/css/style.css
@@ -479,7 +479,7 @@ section.casinos-italy.casino-di-venezia .casinos-italy-wrapper .row .col-lg-4:nt
 }
 
 .contattaci {
-  background: url(../img/contattaci.jpg);
+  background: url(../img/contattaci.jpeg);
   height: 500px;
   background-repeat: no-repeat;
   background-size: cover;
