--- a/scss/style.scss
+++ b/scss/style.scss
@@ -689,9 +689,10 @@ section.contact-wrapepr {
                 border-color: #25374f !important;
             }
 
-            img {
-                width: auto;
-                z-index: 2;
+            i {
+                color: #ffff;
+                z-index: 1;
+                font-size: 20px;
             }
 
 
