--- a/scss/style.scss
+++ b/scss/style.scss
@@ -221,7 +221,8 @@ section.banner-sectio {
             justify-content: center;
             margin-top: 50px;
 
-            .col-lg-4:last-child {
+            .col-lg-6:nth-child(3),
+            .col-lg-6:last-child  {
                 margin-top: 30px;
             }
         }
