--- a/scss/style.scss
+++ b/scss/style.scss
@@ -858,5 +858,9 @@ section.casino-inner-page.perla {
     width: 100% !important;
   }
 
+  .mobile-table{
+    display: none;
+  }
+
 
 @import'./responsive';
