--- a/css/style.css
+++ b/css/style.css
@@ -825,6 +825,10 @@ section.home-main .container {
   width: 100% !important;
 }
 
+.mobile-table {
+  display: none;
+}
+
 @media screen and (max-width: 1199px) {
   .casinos-italy {
     background: none;
@@ -900,6 +904,11 @@ section.home-main .container {
   }
   section.contact-wrapepr {
     padding: 80px 0 0;
+  }
+}
+@media screen and (max-width: 575px) {
+  .mobile-table {
+    display: block;
   }
 }
 
