--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -101,4 +101,11 @@
     .mobile-table{
         display: block;
     }
+    main.desktop_main {
+        display: none;
+        }
+        
+        header.page-header.mobile_header {
+        background: #2e3986;
+        }
 }
