--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -100,6 +100,7 @@
 @media screen and (max-width: 575px) {
     .mobile-table{
         display: block;
+        padding-top: 40px;
     }
     main.desktop_main {
         display: none;
