--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -109,4 +109,7 @@
         header.page-header.mobile_header {
         background: #2e3986;
         }
+        .paragraph {
+            padding: 19px 10px;
+        }
 }
